chore: deprecate docker-compose files and update Redis command
- Mark docker-compose.dev.yml and docker-compose.yml as deprecated, suggesting the use of local dev-infra instead.
- Update Redis command in docker-compose.dev.yml to include maxmemory-policy noeviction.
- Add deprecation notice in package.json scripts.
- Refactor various components and pages in the dashboard for improved performance and structure, including the introduction of new hooks and UI elements.
- Remove unused loading skeleton components and streamline loading states across pages.
- Enhance navigation and sidebar components for better user experience.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,5 @@
 # ErrorWatch - Development Services
+# DEPRECATED - Use local dev-infra instead
 # Usage: docker compose -f docker-compose.dev.yml up -d
 
 services:
@@ -24,7 +25,7 @@ services:
     container_name: errorwatch-redis-dev
     ports:
       - "6380:6379"
-    command: redis-server --appendonly yes
+    command: redis-server --appendonly yes --maxmemory-policy noeviction
     volumes:
       - errorwatch_redis_dev:/data
     healthcheck:
