--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "docker compose -f docker-compose.dev.yml up -d && turbo run dev",
     "dev:no-docker": "turbo run dev",
+    "# DEPRECATED - Use local dev-infra instead": "",
     "docker:up": "docker compose -f docker-compose.dev.yml up -d",
     "docker:down": "docker compose -f docker-compose.dev.yml down",
     "docker:logs": "docker compose -f docker-compose.dev.yml logs -f",
