--- a/packages/sdk-symfony/config/packages/error_watch.yaml
+++ b/packages/sdk-symfony/config/packages/error_watch.yaml
@@ -3,3 +3,11 @@ error_watch:
   endpoint: 'http://localhost:3333'
   api_key: 'changeme'
   environment: '%env(APP_ENV)%'
+
+  monolog:
+    enabled: true
+    level: warning
+
+  logs:
+    enabled: true
+    level: debug
