--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -79,6 +79,8 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
     networks:
       - errorwatch-net
     healthcheck:
