deploy: dockerize caddy for prod and unify self-hosted oneshot flow

--- a/.env.production.example
+++ b/.env.production.example
@@ -8,25 +8,23 @@
 # Domain Configuration
 # ===========================================
 DOMAIN=errorwatch.io
+ACME_EMAIL=admin@errorwatch.io
 API_URL=https://api.errorwatch.io
 DASHBOARD_URL=https://errorwatch.io
 
-# ===========================================
-# SSL/TLS (Caddy + Let's Encrypt)
-# ===========================================
-ACME_EMAIL=admin@errorwatch.io
-
-# DNS Provider for wildcard certs
-# Options: cloudflare, route53, digitalocean, vultr, etc.
-DNS_PROVIDER=cloudflare
-
-# Cloudflare API Token (Zone:DNS:Edit permission)
-# Create at: https://dash.cloudflare.com/profile/api-tokens
-CLOUDFLARE_API_TOKEN=your_cloudflare_api_token_here
+# Caddy (Docker reverse proxy)
+CADDY_HTTP_PORT=80
+CADDY_HTTPS_PORT=443
+DASHBOARD_UPSTREAM=host.docker.internal:4001
+API_UPSTREAM=host.docker.internal:3333
 
 # ===========================================
 # Database (PostgreSQL)
 # ===========================================
+# Host ports published by docker-compose (change to avoid conflicts)
+DOCKER_POSTGRES_PORT=55432
+DOCKER_REDIS_PORT=56379
+
 POSTGRES_DB=errorwatch
 POSTGRES_USER=errorwatch
 POSTGRES_PASSWORD=GENERATE_STRONG_PASSWORD_HERE
