--- a/apps/monitoring-server/.env.example
+++ b/apps/monitoring-server/.env.example
@@ -16,14 +16,15 @@ DASHBOARD_URL=http://localhost:4000
 # ============================================
 # Database (PostgreSQL)
 # ============================================
-DATABASE_URL=postgresql://errorwatch:errorwatch_dev_password@localhost:5432/errorwatch
+# Docker compose defaults to non-standard host ports to avoid conflicts with local Sentry/DB.
+DATABASE_URL=postgresql://errorwatch:errorwatch_dev_password@localhost:55432/errorwatch
 DATABASE_POOL_SIZE=20
 DATABASE_SSL=false
 
 # ============================================
 # Redis (Rate Limiting & Queue)
 # ============================================
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://localhost:56379
 
 # ============================================
 # Source Maps Storage
