--- a/deploy/.env.production.example
+++ b/deploy/.env.production.example
@@ -10,6 +10,7 @@ LOG_LEVEL=info
 
 # Public URLs
 DOMAIN=errorwatch.io
+ACME_EMAIL=admin@errorwatch.io
 DASHBOARD_URL=https://errorwatch.io
 API_URL=https://api.errorwatch.io
 BETTER_AUTH_URL=https://api.errorwatch.io
@@ -18,16 +19,24 @@ BETTER_AUTH_URL=https://api.errorwatch.io
 NEXT_PUBLIC_APP_URL=https://errorwatch.io
 NEXT_PUBLIC_MONITORING_API_URL=https://api.errorwatch.io
 
+# Caddy (Docker)
+CADDY_HTTP_PORT=80
+CADDY_HTTPS_PORT=443
+DASHBOARD_UPSTREAM=host.docker.internal:4001
+API_UPSTREAM=host.docker.internal:3333
+
 # PostgreSQL (docker-compose.prod.yml uses these)
+DOCKER_POSTGRES_PORT=55432
+DOCKER_REDIS_PORT=56379
 POSTGRES_DB=errorwatch
 POSTGRES_USER=errorwatch
 POSTGRES_PASSWORD=CHANGE_ME
-DATABASE_URL=postgresql://errorwatch:CHANGE_ME@localhost:5432/errorwatch
+DATABASE_URL=postgresql://errorwatch:CHANGE_ME@localhost:55432/errorwatch
 DATABASE_POOL_SIZE=20
 DATABASE_SSL=false
 
 # Redis
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://localhost:56379
 
 # Security secrets
 BETTER_AUTH_SECRET=CHANGE_ME
