--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,76 +1,30 @@
 # ===========================================
 # ErrorWatch Production Docker Compose
-# Self-hosted VPS deployment
+# Apps run on host via PM2, infra + reverse proxy run in Docker.
 # ===========================================
 
-# Services are commented out - apps run natively via PM2
-# Only infra (postgres, redis) runs in Docker
-
 services:
-  # ===========================================
-  # Dashboard (Next.js) - RUNS NATIVELY VIA PM2
-  # ===========================================
-  # dashboard:
-  #   build:
-  #     context: ./apps/dashboard
-  #     dockerfile: Dockerfile
-  #     args:
-  #       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:3333}
-  #   container_name: errorwatch-dashboard
-  #   restart: unless-stopped
-  #   ports:
-  #     - "3001:3000"
-  #   environment:
-  #     - NODE_ENV=production
-  #     - NEXT_TELEMETRY_DISABLED=1
-  #     - API_URL=http://api:3333
-  #   networks:
-  #     - errorwatch-net
-  #   depends_on:
-  #     api:
-  #       condition: service_healthy
-  #   healthcheck:
-  #     test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/"]
-  #     interval: 30s
-  #     timeout: 5s
-  #     retries: 3
-  #     start_period: 15s
+  caddy:
+    image: caddy:2-alpine
+    container_name: errorwatch-caddy
+    restart: unless-stopped
+    ports:
+      - "${CADDY_HTTP_PORT:-80}:80"
+      - "${CADDY_HTTPS_PORT:-443}:443"
+    environment:
+      DOMAIN: ${DOMAIN:?DOMAIN is required}
+      ACME_EMAIL: ${ACME_EMAIL:?ACME_EMAIL is required}
+      DASHBOARD_UPSTREAM: ${DASHBOARD_UPSTREAM:-host.docker.internal:4001}
+      API_UPSTREAM: ${API_UPSTREAM:-host.docker.internal:3333}
+    volumes:
+      - ./deploy/Caddyfile:/etc/caddy/Caddyfile:ro
+      - caddy_data:/data
+      - caddy_config:/config
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    networks:
+      - errorwatch-net
 
-  # ===========================================
-  # Monitoring Server (API) - RUNS NATIVELY VIA PM2
-  # ===========================================
-  # api:
-  #   build:
-  #     context: ./apps/monitoring-server
-  #     dockerfile: Dockerfile
-  #   container_name: errorwatch-api
-  #   restart: unless-stopped
-  #   ports:
-  #     - "3333:3333"
-  #   environment:
-  #     - NODE_ENV=production
-  #     - PORT=3333
-  #     - DATABASE_URL=postgresql://${POSTGRES_USER:-errorwatch}:${POSTGRES_PASSWORD:?POSTGRES_PASSWORD required}@postgres:5432/${POSTGRES_DB:-errorwatch}
-  #     - REDIS_URL=redis://redis:6379
-  #     - BETTER_AUTH_SECRET=${BETTER_AUTH_SECRET:?BETTER_AUTH_SECRET required}
-  #     - CORS_ORIGINS=${CORS_ORIGINS:-http://localhost:3001}
-  #   networks:
-  #     - errorwatch-net
-  #   depends_on:
-  #     postgres:
-  #       condition: service_healthy
-  #     redis:
-  #       condition: service_healthy
-  #   healthcheck:
-  #     test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3333/health/live"]
-  #     interval: 30s
-  #     timeout: 5s
-  #     retries: 3
-  #     start_period: 10s
-
-  # ===========================================
-  # PostgreSQL Database - RUNS IN DOCKER
-  # ===========================================
   postgres:
     image: postgres:16-alpine
     container_name: errorwatch-postgres
@@ -82,7 +36,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "${DOCKER_POSTGRES_PORT:-55432}:5432"
     networks:
       - errorwatch-net
     healthcheck:
@@ -92,9 +46,6 @@ services:
       retries: 5
       start_period: 10s
 
-  # ===========================================
-  # Redis (Queue & Caching) - RUNS IN DOCKER
-  # ===========================================
   redis:
     image: redis:7-alpine
     container_name: errorwatch-redis
@@ -102,6 +53,8 @@ services:
     command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
     volumes:
       - redis_data:/data
+    ports:
+      - "${DOCKER_REDIS_PORT:-56379}:6379"
     networks:
       - errorwatch-net
     healthcheck:
@@ -115,5 +68,7 @@ networks:
     driver: bridge
 
 volumes:
+  caddy_data:
+  caddy_config:
   postgres_data:
   redis_data:
