--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@
 # ErrorWatch Production Docker Compose
 # DEPRECATED - Use local dev-infra instead
 # ===========================================
+# Published host ports can be customized with DOCKER_POSTGRES_PORT / DOCKER_REDIS_PORT.
 
 version: "3.9"
 
@@ -19,6 +20,8 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "${DOCKER_POSTGRES_PORT:-55432}:5432"
     networks:
       - errorwatch-internal
     healthcheck:
@@ -38,6 +41,8 @@ services:
     command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
     volumes:
       - redis_data:/data
+    ports:
+      - "${DOCKER_REDIS_PORT:-56379}:6379"
     networks:
       - errorwatch-internal
     healthcheck:
