fix(production): resolve deployment issues for bare-metal server without DNS
- Fix PM2 command (remove invalid --update-env flag)
- Update DATABASE_URL/REDIS_URL to use host.docker.internal
- Fix .env.production EMAIL_FROM quoting
- Add --ignore-scripts to bun install
- Change db:migrate to db:push for PostgreSQL
- Add conditional secure cookie for better-auth (USE_SECURE_COOKIES)
- Configure Caddy reverse proxy for API, SSE, and tRPC routes
- Add NEXT_PUBLIC_SSE_URL env var for SSE connections
- Add production release notes (deploy/release.md)

Tested on bare-metal server with IP-based access (no DNS)

--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -10,6 +10,36 @@
         output stdout
         format json
     }
+    # Disable automatic HTTPS for domains without DNS
+    auto_https off
+}
+
+http://51.158.55.137 {
+    # Auth API -> backend
+    @authApi path /api/auth/*
+    reverse_proxy @authApi host.docker.internal:3333
+
+    # SSE -> backend (strip encoding headers)
+    @sse path /sse/*
+    reverse_proxy @sse host.docker.internal:3333 {
+        header_down -Transfer-Encoding
+        header_down -Content-Encoding
+    }
+
+    # tRPC API -> dashboard (Next.js)
+    @trpcApi path /api/trpc/*
+    reverse_proxy @trpcApi host.docker.internal:4001
+
+    # Other API routes -> backend
+    @backendApi path /api/v1/*
+    reverse_proxy @backendApi host.docker.internal:3333
+
+    # Everything else -> dashboard
+    reverse_proxy host.docker.internal:4001
+}
+
+http://{$DOMAIN} {
+    reverse_proxy {$DASHBOARD_UPSTREAM}
 }
 
 {$DOMAIN} {
