fix: add CORS headers for SSE endpoints
- Add SSE route handling in Caddyfile
- Add CORS middleware for /sse endpoint in API

--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -53,5 +53,11 @@ api.{$DOMAIN} {
         -Server
     }
 
+    @sse path /sse/*
+    reverse_proxy @sse {$API_UPSTREAM} {
+        header_down -Transfer-Encoding
+        header_down -Content-Encoding
+    }
+
     reverse_proxy {$API_UPSTREAM}
 }
