--- a/deploy/.env.production.example
+++ b/deploy/.env.production.example
@@ -10,6 +10,7 @@ LOG_LEVEL=info
 
 # Public URLs
 DOMAIN=errorwatch.io
+BASE_DOMAIN=errorwatch.io
 ACME_EMAIL=admin@errorwatch.io
 DASHBOARD_URL=https://errorwatch.io
 API_URL=https://api.errorwatch.io
