ci: make lint non-blocking and add redis service for api tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  lint-build:
-    name: Lint + Build
+  build:
+    name: Build
     runs-on: ubuntu-latest
     timeout-minutes: 25
 
@@ -25,7 +25,8 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile --ignore-scripts
 
-      - name: Lint
+      - name: Lint (informational)
+        continue-on-error: true
         run: bun run lint
 
       - name: Build
@@ -35,6 +36,16 @@ jobs:
     name: API Tests
     runs-on: ubuntu-latest
     timeout-minutes: 20
+    services:
+      redis:
+        image: redis:7-alpine
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 5s
+          --health-timeout 3s
+          --health-retries 20
 
     steps:
       - name: Checkout
@@ -47,4 +58,6 @@ jobs:
         run: bun install --frozen-lockfile --ignore-scripts
 
       - name: Run monitoring-server tests
+        env:
+          REDIS_URL: redis://127.0.0.1:6379
         run: bun test apps/monitoring-server/tests
